Fixing button text wrapping

--- a/frontend/src/styles/animal.css
+++ b/frontend/src/styles/animal.css
@@ -41,6 +41,7 @@
 .actions a {
     color:white;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .actions button {
@@ -53,6 +54,7 @@
     padding-left: 10px;
     width: 70px;
     text-decoration: none;
+    white-space: nowrap;
 }
   
 .actions button:hover,
